--- a/API/API.csproj
+++ b/API/API.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="bootstrap" Version="5.3.2" />
     <PackageReference Include="FluentValidation" Version="11.7.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.10" />
@@ -20,8 +21,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BlogApp.BLL\BlogApp.BLL.csproj" />
-    <ProjectReference Include="..\BlogApp.DLL\BlogApp.DLL.csproj" />
+    <ProjectReference Include="..\BlogAppBLL\BlogApp.BLL.csproj" />
+    <ProjectReference Include="..\BlogAppDLL\BlogApp.DLL.csproj" />
   </ItemGroup>
 
   <ItemGroup>
