--- a/API/API.csproj
+++ b/API/API.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BlogApp.BLL\BlogApp.BLL.csproj" />
     <ProjectReference Include="..\BlogAppBLL\BlogApp.BLL.csproj" />
     <ProjectReference Include="..\BlogAppDLL\BlogApp.DLL.csproj" />
   </ItemGroup>
